--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.7.3",
@@ -24,14 +25,17 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-redash": "^14.2.3",
-    "react-native-safe-area-context": "~3.0.7",
+    "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "~0.11.7",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/yup": "^0.29.5",
     "eslint": "^7.7.0",
     "eslint-config-react-native-wcandillon": "^3.3.3",
     "typescript": "~3.9.5"
